그린카 퍼블리싱 산출물 리스트 업데이트

--- a/src/status.html
+++ b/src/status.html
@@ -1899,6 +1899,104 @@
                         </tr>
                         <tr>
                             <td></td>
+                            <td></td>
+                            <td>개인정보 수집 이용 및 제공 동의</td>
+                            <td></td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0601_M01_02#full">SCR_GA_CS_0601_M01_02.html</a></td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td>접수유형 선택</td>
+                            <td></td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0601_M01_03#bottom">SCR_GA_CS_0601_M01_03.html</a></td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td>(미동의 시)</td>
+                            <td></td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0601_M01_04.html">SCR_GA_CS_0601_M01_04.html</a></td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td>(파일첨부)</td>
+                            <td></td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0601_M01_05.html">SCR_GA_CS_0601_M01_05.html</a></td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td>Bottom Up Notification</td>
+                            <td></td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0601_M01_06#bottom">SCR_GA_CS_0601_M01_06.html</a></td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td>Bottom Up Function select</td>
+                            <td></td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0601_M01_07#bottom">SCR_GA_CS_0601_M01_07.html</a></td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td>Popup Notification</td>
+                            <td></td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0601_M01_08">SCR_GA_CS_0601_M01_08.html</a></td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
                             <td>1:1문의</td>
                             <td>문의하기</td>
                             <td></td>
