--- a/src/html/mypage/SCR_GA_CI_1202_M01.html
+++ b/src/html/mypage/SCR_GA_CI_1202_M01.html
@@ -28,7 +28,7 @@
 												<input type="number" class="ip-txt" data-pos="4" placeholder="0000" maxlength="4">
 												<div class="line"></div>
 												<button type="button" class="icon-group btn-del">
-													<i class="ico delete md"></i>
+													<i class="ico delete lg"></i>
 												</button>
 											</div>
 										</div>
@@ -42,10 +42,10 @@
 												<span class="txt">/</span>
 												<input type="number" class="ip-txt" placeholder="YY">
 												<div class="line"></div>
+												<button type="button" class="icon-group btn-del">
+													<i class="ico delete lg"></i>
+												</button>
 											</div>
-											<button type="button" class="icon-group btn-del">
-												<i class="ico delete md"></i>
-											</button>
 										</div>
 									</div>
 		
