--- a/src/html/reservation/SCR_GA_RV_0207_M01.html
+++ b/src/html/reservation/SCR_GA_RV_0207_M01.html
@@ -44,7 +44,8 @@
 													<input type="text" class="ip-txt" data-pos="4" placeholder="0000" maxlength='4'>
 													<div class="line"></div>
 													<button type="button" class="icon-group btn-del">
-														<i class="ico delete md"></i>
+														<!-- 20220829 -->
+														<i class="ico delete lg"></i>
 													</button>
 												</div>
 											</div>
