--- a/src/status.html
+++ b/src/status.html
@@ -599,7 +599,10 @@
                             <td><a target="_blank" href="html/reservation/SCR_GA_RV_0207_M01.html">SCR_GA_RV_0207_M01.html</a></td>
                             <td class="stat">⚫</td>
                             <td class="compl">07-18</td>
-                            <td class="date">20220818</td>
+                            <td class="date">
+								20220818<br>
+								20220829
+							</td>
                             <td></td>
                         </tr>
                         <tr>
