--- a/src/html/mypage/SCR_GA_CI_1301_T01.html
+++ b/src/html/mypage/SCR_GA_CI_1301_T01.html
@@ -57,7 +57,7 @@
 											<input type="text" class="ip-txt" data-pos="4" placeholder="0000" maxlength="4">
 											<div class="line"></div>
 											<button type="button" class="icon-group btn-del">
-												<i class="ico delete md"></i>
+												<i class="ico delete lg"></i>
 											</button>
 										</div>
 									</div>
