그린카 퍼블리싱 산출물 리스트 업데이트

--- a/src/status.html
+++ b/src/status.html
@@ -2015,6 +2015,160 @@
                         <tr>
                             <td></td>
                             <td></td>
+                            <td></td>
+                            <td>문의유형 선택</td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_01.html">SCR_GA_CS_0701_M01_01.html</a></td>
+                            <td class="stat"></td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>예약정보 선택</td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_02.html">SCR_GA_CS_0701_M01_02.html</a></td>
+                            <td class="stat"></td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>예약정보 선택</td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_03.html">SCR_GA_CS_0701_M01_03.html</a></td>
+                            <td class="stat"></td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>흡연신고  1</td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_04.html">SCR_GA_CS_0701_M01_04.html</a></td>
+                            <td class="stat"></td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>흡연신고  2</td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_05.html">SCR_GA_CS_0701_M01_05.html</a></td>
+                            <td class="stat"></td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>흡연신고  3</td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_06.html">SCR_GA_CS_0701_M01_06.html</a></td>
+                            <td class="stat"></td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>차량고장접수</td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_07.html">SCR_GA_CS_0701_M01_07.html</a></td>
+                            <td class="stat"></td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>운행정보없음</td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_08.html">SCR_GA_CS_0701_M01_08.html</a></td>
+                            <td class="stat"></td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>전화연결</td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_09.html">SCR_GA_CS_0701_M01_09.html</a></td>
+                            <td class="stat"></td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>환불접수</td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_10.html">SCR_GA_CS_0701_M01_10.html</a></td>
+                            <td class="stat"></td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td></td>
+                            <td>개인정보권리행사-세부항목선택</td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_11.html">SCR_GA_CS_0701_M01_11.html</a></td>
+                            <td class="stat"></td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
                             <td>문의내역</td>
                             <td></td>
                             <td></td>
