아이콘, 컨텐츠 이미지 업데이트

--- a/src/status.html
+++ b/src/status.html
@@ -2020,7 +2020,7 @@
                             <td></td>
                             <td>박지수</td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_01.html">SCR_GA_CS_0701_M01_01.html</a></td>
+                            <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0701_M01_01#bottom">SCR_GA_CS_0701_M01_01.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -2034,7 +2034,7 @@
                             <td></td>
                             <td>박지수</td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_02.html">SCR_GA_CS_0701_M01_02.html</a></td>
+                            <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0701_M01_02#bottom">SCR_GA_CS_0701_M01_02.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -2048,7 +2048,7 @@
                             <td></td>
                             <td>박지수</td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_03.html">SCR_GA_CS_0701_M01_03.html</a></td>
+                            <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0701_M01_03#bottom">SCR_GA_CS_0701_M01_03.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -2118,7 +2118,7 @@
                             <td>운행정보없음</td>
                             <td>박지수</td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_08.html">SCR_GA_CS_0701_M01_08.html</a></td>
+                            <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0701_M01_08">SCR_GA_CS_0701_M01_08.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -2132,7 +2132,7 @@
                             <td>전화연결</td>
                             <td>박지수</td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_09.html">SCR_GA_CS_0701_M01_09.html</a></td>
+                            <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0701_M01_09#bottom">SCR_GA_CS_0701_M01_09.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -2146,7 +2146,7 @@
                             <td></td>
                             <td>박지수</td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_10.html">SCR_GA_CS_0701_M01_10.html</a></td>
+                            <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0701_M01_10#bottom">SCR_GA_CS_0701_M01_10.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -2160,7 +2160,7 @@
                             <td></td>
                             <td>박지수</td>
                             <td>/customer</td>
-                            <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_11.html">SCR_GA_CS_0701_M01_11.html</a></td>
+                            <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0701_M01_11#bottom">SCR_GA_CS_0701_M01_11.html</a></td>
                             <td class="stat"></td>
                             <td class="compl"></td>
                             <td class="date"></td>
