그린카 퍼블리싱 산출물 리스트 업데이트

--- a/src/html/customer/SCR_GA_CS_0101_M01.html
+++ b/src/html/customer/SCR_GA_CS_0101_M01.html
@@ -6,7 +6,7 @@
     <body>
         <div id="wrap">
             <!-- header -->
-            @@include('@@webRoot/include/header.html', { type: "sub_02", title: "가입/탈퇴" })
+            @@include('@@webRoot/include/header.html', { type: "sub_02", title: "고객센터" })
             <!-- //header -->
 
             <!-- container -->
@@ -83,7 +83,7 @@
                         <hr class="divider" />
                         <section class="section">
                             <div class="section-title">
-                                <h3 class="title-md">자주하는 질문</h3>
+                                <h3>자주하는 질문</h3>
                                 <button class="btn icon right btn-more-view">
                                     <span class="text">더보기</span>
                                     <i class="ico arrow-right-nav030 md"></i>
@@ -187,13 +187,13 @@
                                 </div>
                                 <div class="item">
                                     <div class="img">
-                                        <img src="/images/contents/gc_cs_qiuck_01.svg" alt="">
+                                        <img src="/images/contents/gc_cs_qiuck_02.svg" alt="">
                                     </div>
                                     <div class="text">그린카비즈</div>
                                 </div>
                                 <div class="item">
                                     <div class="img">
-                                        <img src="/images/contents/gc_cs_qiuck_01.svg" alt="">
+                                        <img src="/images/contents/gc_cs_qiuck_03.svg" alt="">
                                     </div>
                                     <div class="text">
                                         온라인<br />
