--- a/src/html/customer/SCR_GA_CS_0501_M01.html
+++ b/src/html/customer/SCR_GA_CS_0501_M01.html
@@ -19,7 +19,7 @@
                                 전국 어디서나 24시간. 내 차처럼 편리하게 이용<br />
                                 <span class="text-green">가장 경제적인 업무 차량 선택 - 이용 시간만큼 비용 지불</span>
                             </p>
-                            <div class="video-wrap">
+                            <div class="video-wrap mt16">
                                 <img src="/images/contents/img_video.svg" alt="" />
                             </div>
                         </section>
