--- a/src/html/customer/SCR_GA_CS_0601_M01_02.html
+++ b/src/html/customer/SCR_GA_CS_0601_M01_02.html
@@ -1,86 +1,62 @@
-<!DOCTYPE html>
-<html lang="ko">
-    <head>
-        @@include('@@webRoot/include/head.html')
-    </head>
-    <body>
-        <div id="wrap">
-            <!-- header -->
-            @@include('@@webRoot/include/header.html', { type: "sub_02", title: "온라인서류제출" })
-            <!-- //header -->
+<div class="layer-wrap">
+    <div class="layer-header">
+        <!-- 프리존 반납이란? -->
+        @@include('@@webRoot/include/header.html', { type: "sub_pop", title: "개인정보 수집 이용 및 제공 동의" })
+    </div>
 
-            <!-- container -->
-            <section id="container">
-                <div class="contents">
-                    <div class="customer">
-                        <section>
-                            <h3 class="intro-text">
-                                <span>추가정보를</span><br />
-                                안전하게 업데이트 해드리겠습니다.
-                            </h3>
-                            <div class="guide-box align-left mt16">
-                                <p>온라인서류제출 신청안내 확인 후, 기재 등록해주세요</p>
-                                <p>서류제출 사유를 자세히 입력해주시면, 보다 빠른 업무처리가 가능합니다.</p>
-                            </div>
-                            <h4>개인정보 수집 이용 및 제공 동의 (필수)</h4>
-                            <div class="terms">
-                                <a href="#" class="item">
-                                    <span class="text">[개인정보 수집수집 · 이용에 대한 동의]</span><i class="ico next-sm md"></i>
-                                </a>
-                            </div>
-                            <div class="agree-group grid-flex mt16">
-                                <label for="tmpRadio01" class="gc-radio flex">
-                                    <input type="radio" name="tmpRadio01" id="tmpRadio01" checked="">
-                                    <span>동의</span>
-                                </label>
-                                <label for="tmpRadio02" class="gc-radio flex">
-                                    <input type="radio" name="tmpRadio01" id="tmpRadio02">
-                                    <span>미동의</span>
-                                </label>
-                            </div>
-                        </section>
-                        <hr class="divider" />
-                        <section>
-                            <h4>접수유형</h4>
-                        </section>
-                        <hr class="divider" />
-                        <section>
-                            <h4>접수내용</h4>
-                            <ul class="list">
-                                <li>작성 시, 1000자 이내로 작성해주세요.</li>
-                                <li>개인정보 수집·이용 동의에 체크한 뒤 관련서류를 등록해주세요.</li>
-                                <li>제공된 정보는 이용자식별, 회원정보변경 등의 요청 목적으로만 사용되며, 개인정보보보호기간에 준한 보관/폐기가 진행됩니다.</li>
-                                <li>제공된 정보는 이용자식별, 회원정보변경 등의 요청 목적으로만 사용되며, 개인정보보보호기간에 준한 보관/폐기가 진행됩니다.</li>
-                                <li>운전면허번호는 면허 유효성 확인을 위해 전체번호가 필요합니다.</li>
-                            </ul>
-                        </section>
-                        <hr class="divider" />
-                        <section>
-                            <h4>파일첨부</h4>
-                            <div class="">
-                                <div class="btn-group">
-                                    <button type="button" class="btn lg"><i class="ico camera lg"></i><span class="text">첨부하기</span></button>
-                                </div>
-                                <p>10MB 미만의 이미지 파일만 업로드 가능합니다. (jpg, jpeg, png, bmp)</p>
-                            </div>
-                            <div class="btn-group">
-                                <button type="button" class="btn green lg">접수하기</button>
-                            </div>
-                        </section>
-                        <div class="toast-pop active">
-                            <div class="toast-container">
-                                <div class="module">
-                                    <p class="message">
-                                        개인정보 수집 이용에 대한 <br />
-                                        동의 후 작성 가능합니다.
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-            <!-- //container -->
+    <div class="layer-body">
+        <div class="">
+            <p>회사는 이용자의 동의가 있거나 법령의 의한 경우를 제외하고는 본 조에서 고지한 범위를 넘어 이용자의 개인정보를 이용하지 않으며, 수집한 개인정보의 수집 및 이용 목적은 아래와 같습니다.</p>
+            <p class="">※ 주민등록번호를 포함하는 서류 첨부 시, 주민등록번호 뒤 6자리는 마스킹 처리가 될 수 있습니다.</p>
+            <div class="tb-wrap type-2  mt24">
+                <table>
+                    <colgroup>
+                    <col width="144px">
+                    <col width="auto">
+                    </colgroup>
+                    <thead>
+                        <tr>
+                            <th>구분</th>
+                            <th>시간</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>면허증 등 신분증</td>
+                            <td>-이전 페이지 참고-</td>
+                        </tr>
+                        <tr>
+                            <td>운전경력증명서</td>
+                            <td>-해당내용-</td>
+                        </tr>
+                        <tr>
+                            <td>가족관계증명서</td>
+                            <td>-해당내용-</td>
+                        </tr>
+                        <tr>
+                            <td>개인정보제공동의서</td>
+                            <td>-해당내용-</td>
+                        </tr>
+                        <tr>
+                            <td>사업자등록증</td>
+                            <td>-해당내용-</td>
+                        </tr>
+                        <tr>
+                            <td>통신사 가입증명서</td>
+                            <td>-해당내용-</td>
+                        </tr>
+                        <tr>
+                            <td>대리인신분증</td>
+                            <td>-해당내용-</td>
+                        </tr>
+                        <tr>
+                            <td>기타(명의자사함확인서 등)</td>
+                            <td>-해당내용-</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <p class="mt8">※ 보유 및 이용기간 : 업무 목적 달성 후 즉시 폐기 (수집항목 공통)</p>
         </div>
-    </body>
-</html>
+    </div>
+</div>
