고객센터 -- 작업 중

--- a/src/html/customer/SCR_GA_CS_0601_M01.html
+++ b/src/html/customer/SCR_GA_CS_0601_M01.html
@@ -24,9 +24,7 @@
                             </div>
                             <h4>개인정보 수집 이용 및 제공 동의 (필수)</h4>
                             <div class="terms">
-                                <a href="#" class="item">
-                                    <span class="text">[개인정보 수집수집 · 이용에 대한 동의]</span><i class="ico next-sm md"></i>
-                                </a>
+                                <a href="#" class="item"> <span class="text">[개인정보 수집수집 · 이용에 대한 동의]</span><i class="ico next-sm md"></i> </a>
                             </div>
                             <div class="agree-group grid-flex mt16">
                                 <label for="tmpRadio01" class="gc-radio flex">
@@ -42,16 +40,10 @@
                         <hr class="divider" />
                         <section>
                             <h4>접수유형</h4>
-                            <div class="gc-select full">
-                                <select name="" id="">
-                                    <option>접수유형을 선택해 주세요</option>
-                                    <option>면허증 등 신분증</option>
-                                </select>
+                            <div class="type-select">
+                                <a href="#" class="item"> <span class="text">접수유형을 선택해 주세요</span><i class="ico next-sm md"></i> </a>
                             </div>
-                        </section>
-                        <hr class="divider" />
-                        <section>
-                            <h4>접수내용</h4>
+                            <h4 class="mt32">접수내용</h4>
                             <div class="ip-textarea">
                                 <textarea name="" id="" cols="30" rows="10" placeholder=" "></textarea>
                             </div>
