--- a/src/html/customer/SCR_GA_CS_0701_M01_04.html
+++ b/src/html/customer/SCR_GA_CS_0701_M01_04.html
@@ -48,7 +48,7 @@
                         <section>
                             <h4>문의유형</h4>
                             <div class="type-select">
-                                <a href="#" class="item"> <span class="text">문의 유형을 선택해 주세요</span><i class="ico next-sm md"></i> </a>
+                                <a href="#" class="item"> <span class="text">흡연신고</span><i class="ico next-sm md"></i> </a>
                             </div>
 
                             <h4 class="mt32">문의내용</h4>
@@ -69,6 +69,15 @@
                                 </div>
                                 <p>10MB 미만의 이미지 파일만 업로드 가능합니다. (jpg, jpeg, png, bmp)</p>
                             </div>
+                        </section>
+                        <hr class="divider" />
+                        <section>
+                            <ul class="tmp-faq-list">
+                                <li>
+                                    <button type="button">작성시 유의사항 보기<i class="ico arrow-bot md"></i></button>
+                                   
+                                </li>
+                            </ul>
                             <div class="btn-group mt24">
                                 <button type="button" class="btn green lg">접수하기</button>
                             </div>
