--- a/src/html/customer/SCR_GA_CS_0701_M01_07.html
+++ b/src/html/customer/SCR_GA_CS_0701_M01_07.html
@@ -27,7 +27,7 @@
                             </h3>
                             <div class="guide-box align-left mt16">
                                 <p>모바일 문의 상담시간은 09:00~18:00 입니다.</p>
-                                <p>문의 유형에 따라 [작성유의사항]이 있으니, 확인 후 정확한 정보를 입력해주시면 보다 빠른 답변이 가능합니다.</p>
+                                <p>문의 유형에 따라 [작성유의사항]이 있으니, 확인 후 정확한 정보를 입력해주시면 보다 빠른 답변이 가능합니다.</p>
                             </div>
                             <h4>개인정보 수집 이용 및 제공 동의 (필수)</h4>
                             <div class="terms">
@@ -48,10 +48,13 @@
                         <section>
                             <h4>문의유형</h4>
                             <div class="type-select">
-                                <a href="#" class="item"> <span class="text">문의 유형을 선택해 주세요</span><i class="ico next-sm md"></i> </a>
+                                <a href="#" class="item"> <span class="text">차량고장접수</span><i class="ico next-sm md"></i> </a>
                             </div>
-
-                            <h4 class="mt32">문의내용</h4>
+                            <h4 class="mt32">문의유형</h4>
+                            <div class="type-select">
+                                <a href="#" class="item"> <span class="text">더 뉴 K3 1.6/휘발유(100호1000)</span><i class="ico next-sm md"></i> </a>
+                            </div>
+                            <h4 class="mt32">차량고장 접수</h4>
                             <div class="ip-textarea">
                                 <textarea name="" id="" cols="30" rows="4" placeholder=" "></textarea>
                             </div>
@@ -69,8 +72,24 @@
                                 </div>
                                 <p>10MB 미만의 이미지 파일만 업로드 가능합니다. (jpg, jpeg, png, bmp)</p>
                             </div>
-                            <div class="btn-group mt24">
-                                <button type="button" class="btn green lg">접수하기</button>
+                        </section>
+                        <hr class="divider" />
+                        <section>
+                            <ul class="tmp-faq-list">
+                                <li class="active">
+                                    <button type="button">작성시 유의사항 보기<i class="ico arrow-bot md"></i></button>
+                                    <div data-box-type="accordion">
+                                        <ul class="list sm">
+                                            <li>흡연사진을 촬영하여 등록해주시면 이전 사용자의 페널티 적용이 원활하게 진행됩니다.</li>
+                                            <li>접수 내용이 누락되거나 촬영 · 접수된 흡연 사진이 접수된 사진이 불분명한 경우 페널티 부과 및 신고 보상 포인트 지급이 어려운 점 양해 부탁드립니다.</li>
+                                            <li>사진 촬영 시 유의사항 (흡연장면, 그린카 차량표시, 차량번호)</li>
+                                        </ul>
+                                    </div>
+                                </li>
+                            </ul>
+                            <div class="btn-group column mt8">
+                                <button type="button" class="btn line lg">사고/고장 접수 전화연결</button>
+                                <button type="button" class="btn green lg mt32">접수하기</button>
                             </div>
                         </section>
                     </div>
