--- a/src/status.html
+++ b/src/status.html
@@ -1847,12 +1847,26 @@
                         <tr>
                             <td></td>
                             <td></td>
-                            <td>(지역입력)</td>
+                            <td>(지역선택)</td>
                             <td></td>
                             <td></td>
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0401_M01_01.html">SCR_GA_CS_0401_M01_01.html</a></td>
+                            <td class="stat">⚪</td>
+                            <td class="compl"></td>
+                            <td class="date"></td>
+                            <td></td>
+                        </tr>
+                        <tr>
+                            <td></td>
+                            <td></td>
+                            <td>(지역입력)</td>
+                            <td></td>
+                            <td></td>
+                            <td>박지수</td>
+                            <td>/customer</td>
+                            <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0401_M01_02#bottom">SCR_GA_CS_0401_M01_02.html</a></td>
                             <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
@@ -2105,7 +2119,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="html/customer/SCR_GA_CS_0701_M01_07.html">SCR_GA_CS_0701_M01_07.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
@@ -2133,7 +2147,7 @@
                             <td>박지수</td>
                             <td>/customer</td>
                             <td><a target="_blank" href="components/popup_module.html#customer#SCR_GA_CS_0701_M01_09#bottom">SCR_GA_CS_0701_M01_09.html</a></td>
-                            <td class="stat"></td>
+                            <td class="stat">⚪</td>
                             <td class="compl"></td>
                             <td class="date"></td>
                             <td></td>
