--- a/src/status.html
+++ b/src/status.html
@@ -2974,7 +2974,7 @@
 							<td></td>
 							<td></td>
 							<td>/etc</td>
-							<td><a target="_blank" href="html/.html">.html</a></td>
+							<td><a target="_blank" href="components/popup_module.html#etc#SCR_GA_ER_0202_M01#bottom">SCR_GA_ER_0202_M01.html</a></td>
 							<td class="stat"></td>
 							<td class="date"></td>
                             <td class="compl"></td>
