아코디언 수정

--- a/src/html/etc/SCR_GA_ER_0202_M01.html
+++ b/src/html/etc/SCR_GA_ER_0202_M01.html
@@ -69,7 +69,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="ip-group reset">
+				<div class="ip-group field">
 					<div class="row">
 						<input type="text" class="ip-txt" required="" placeholder="사유를 직접 입력해주세요 (15글자 내)">
 						<div class="line"></div>
